--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,9 @@
     "dev": "nodemon index.js",
     "build": "npm i"
   },
+  "engines": {
+  "node": ">=18.18.0 <19.0.0"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
